import java.io.FileNotFoundException;

public class Main {


    static Login login = new Login();

    public static void main(String[] args) throws FileNotFoundException {
        login.login();
    }
}