public class Streaming {

    //TODO add object menu
    //TODO add Object media
    //TODO obejct login
    //TODO object User

}
