package User;

public class AdminHandler {




    public void createMedia(){


    }

    public void removeMedia(){


    }
}
