package User;

public class NormalUser extends AUser {
    public NormalUser(String username, String password, Boolean admin) {
        super(username, password, admin);
    }

    @Override
    public void setUserName() {

    }

    @Override
    public void setPassword() {

    }
}
