package User;

public class UserCreater {






    public void createUser(){


    }




}
